--- a/testProject/DormManager/nbproject/project.properties
+++ b/testProject/DormManager/nbproject/project.properties
@@ -30,11 +30,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.2.3.jar=lib\\jaxb-api-2.2.3.jar
-file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.gson-2.8.2.jar=lib/gson-2.8.2.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.2.3.jar=lib/jaxb-api-2.2.3.jar
+file.reference.sqljdbc42.jar=lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
@@ -90,6 +90,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=OCD_Project.war
+war.name=DormManager.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
